fix(modal): add modal border for high contrast mode

--- a/packages/components/src/modal/Dialog.module.css
+++ b/packages/components/src/modal/Dialog.module.css
@@ -12,6 +12,9 @@
   border: none;
   padding: 0;
   margin: auto;
+  @media (forced-colors: active) {
+    outline: 2px solid;
+  }
 }
 
 .overlay {
